fix: styles for scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -22,31 +22,27 @@ html {
 	height: 100vh;
 }
 
-/* .scroller {
-	--scroller-width: 0.2em;
-	scrollbar-width: var(--scroller-width);
+.scrollbar {
+	--scrollbar-width: 0.2em;
+	--scrollbar-bg-color: var(--color-purple-600);
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
-.scroller--theme-custom {
-	--scroller-width: 30px;
+.scrollbar--theme-custom {
+	--scrollbar-width: 14px;
 }
 
-.scroller--theme-custom::-webkit-scrollbar {
-	--scroller-width: 30px;
+.scrollbar--theme-custom::-webkit-scrollbar {
+	width: var(--scrollbar-width);
 }
 
-.scroller--theme-custom::-webkit-scrollbar-track {
-	border: solid 10px transparent;
+.scrollbar--theme-custom::-webkit-scrollbar-thumb {
+	border: 4px solid rgba(0, 0, 0, 0);
+	background-clip: padding-box;
+	border-radius: 20px;
+	background-color: var(--scrollbar-bg-color);
 }
-
-.scroller--theme-custom::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 10px 20px var(--color-purple-600);
-    border: solid 10px transparent;
-	border-radius: 15px;
+.scrollbar--theme-custom::-webkit-scrollbar-thumb:hover {
+	--scrollbar-bg-color: #00000077;
 }
-.scroller--theme-custom::-webkit-scrollbar-thumb:hover {
-    box-shadow: inset 0 0 10px 20px #00000077
-}
- */
-
-
